# sigyl

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-sample  EnvVarInjection.md  FIREBASE_HOSTING_SETUP.md  GOOGLE_CLOUD_RUN_SETUP.md  README.md  deploy.sh  downloaded-logs-20250627-165809.json  get_packages_schema.sql  github-push-report-2025-07-08T23-06-44-972Z.json  import_mcps_to_supabase.py  mcpserver_example.ts  package-lock.json  package.json  test-realistic.ts  testapikeyhash.js  tsconfig.json  wrapper.cjs
.sigyl-mcp/: integration.ts  package-updates.json
cli-core/: README.md  TESTING.md  package-lock.json  package.json  test-cli.sh
demo/: app-with-types.ts  package.json  sample-express-app.js  types.ts
demo-ts/: app.ts
python-cli/: .mcp-inspector-config.json  pyproject.toml  requirements.txt  setup.py  test_scanner_fixed.py
python-cli/mcp_wrap/: __init__.py  cli.py  fastapi_scanner.py  generator.py  inspector.py  main.py  mcp_generator.py  mcp_wrap.py  schema_writer.py  server_generator.py
python-cli/mcp_wrap/demo/: claude_tools.json  langchain_tools.py  openai_tools.py
python-cli/mcp_wrap/formats/: claude.py
python-cli/my-fastapi-app/: README.md
python-cli/test-output-fixed/: README.md  requirements.txt
python-cli/test-scan/: README.md
python-cli/test-scan/demo_fastapi/: main.py  requirements.txt
references/: deployerReference.ts  indexReference.ts  initReference.ts  packageServicereference.ts  yamlreference.ts
scan/: package.json  tsconfig.json
state/: deep-link-plan.md  mcp-server-requirements.md  mvp-secrets-plan.md  plan.md  (+6 more)
(+92 files in other folders)
